manifests/destinationrule-idle-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: non-existent-srevice
spec:
  host: non-existent-srevice.testns1.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 5s
